@@ -16,7 +16,8 @@ Stable versions
 	- fix build issues in Cygwin (reported by Benjamin Shadwick)
 	- fix pkg-config library definition
 	- fix loop count reset when restarting module
-	- fix MED MMD0-3 pitch slides (reported by Simon Spiers)
+	- fix MMD0-3 pitch slides (reported by Simon Spiers)
+	- fix MED4 pattern reading (reported by Simon Spears)
 	- fix Stonecracker depacker
 	- fix IT envelopes with no envelope points
 
